# mangana_bot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
docker/cert/: rootCA.cert  rootCA.key
js/: html-extractor.js  index.js  package-lock.json  package.json
js/helper/: browser.js  page-validator.js  referrers.json
migrations/2021-09-13-115427_parse_histories/: down.sql  up.sql
migrations/2021-09-13-125427_subscribers/: up.sql
migrations/2021-09-18-140444_add_coulumns_to_parse_histories/: down.sql  up.sql
migrations/2021-09-21-155400_app_notifications/: down.sql  up.sql
migrations/2021-09-27-005427_topic/: up.sql
migrations/2021-10-31-073141_change_parse_history_topic_field/: down.sql  up.sql
migrations/2021-12-03-073141_add_unique_idx_parse_history_topic_field/: down.sql  up.sql
migrations/2021-12-14-111544_create_subscriber_topics/: down.sql  up.sql
migrations/2021-12-14-115033_add_primary_key_to_parse_history/: down.sql  up.sql
migrations/2021-12-14-115245_add_primary_key_to_subscribers/: down.sql  up.sql
migrations/2021-12-14-115904_remove_unique_key_from_parse_history/: up.sql
migrations/2021-12-14-120043_remove_unique_key_from_subscribers/: down.sql  up.sql
migrations/2021-12-19-171111_add_trigger_diesel_manage_updated_at/: down.sql
migrations/2021-12-19-184144_create_table_subscriber_update_notification/: down.sql  up.sql
migrations/2021-12-31-005427_add_new_topics/: up.sql
src/: helper.rs  macros.rs  main.rs
src/application/: bot.rs  mod.rs
src/domain/: mod.rs  pool.rs  (+1 more)
(+77 files in other folders)
